# pg_zoekt

./: .gitignore  Cargo.toml  flake.nix  pg_zoekt.control
nix/: pg_zoekt.nix
src/: am.rs  build.rs  context.rs  introspect.rs  lib.rs  metrics.rs  operators.rs  query.rs  trgm.rs
src/seal/: parallel.rs
src/storage/: decode.rs  encode.rs  mod.rs  parallel_merge.rs  pending.rs  pgbuffer.rs  tombstone.rs  wal.rs
tests/pg_regress/expected/: setup.out
