[package]
name = "pg_zoekt"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_zoekt"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg18"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []

[dependencies]
anyhow = "1.0.100"
bitfield-rle = "0.2.1"
bitpacking = "0.9.2"
crc32fast = "1.5.0"
delta-encoding = "0.4.10"
pgrx = "=0.16.1"
regex = "1.11.2"
roaring = "0.10.3"
stream-vbyte = { version = "0.4.1", features = ["x86_ssse3", "x86_sse41"] }
zerocopy = { version = "0.8.31", features = ["derive", "simd", "std"] }

[dev-dependencies]
pgrx-tests = "=0.16.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
